--- a/ui/listener-edit.ui
+++ b/ui/listener-edit.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>566</width>
-    <height>265</height>
+    <width>729</width>
+    <height>348</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -18,7 +18,7 @@
     <normaloff>:/arado-logo-colo-128.png</normaloff>:/arado-logo-colo-128.png</iconset>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="0" column="2">
+   <item row="0" column="1">
     <widget class="QLabel" name="label_4">
      <property name="font">
       <font>
@@ -47,7 +47,7 @@
      </property>
     </widget>
    </item>
-   <item row="3" column="2" colspan="3">
+   <item row="3" column="1" colspan="3">
     <widget class="QLineEdit" name="addressEdit">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
@@ -73,7 +73,7 @@
      </property>
     </widget>
    </item>
-   <item row="5" column="2">
+   <item row="5" column="1">
     <widget class="QSpinBox" name="portBox">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
@@ -89,7 +89,7 @@
      </property>
     </widget>
    </item>
-   <item row="8" column="0">
+   <item row="7" column="0">
     <widget class="QLabel" name="label_5">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
@@ -105,7 +105,7 @@
      </property>
     </widget>
    </item>
-   <item row="8" column="2" colspan="4">
+   <item row="7" column="1" colspan="4">
     <widget class="QLineEdit" name="uuidEdit">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
@@ -115,7 +115,7 @@
      </property>
     </widget>
    </item>
-   <item row="5" column="3">
+   <item row="5" column="2">
     <widget class="QRadioButton" name="onCheck">
      <property name="layoutDirection">
       <enum>Qt::RightToLeft</enum>
@@ -128,7 +128,7 @@
      </attribute>
     </widget>
    </item>
-   <item row="5" column="4">
+   <item row="5" column="3">
     <widget class="QRadioButton" name="offCheck">
      <property name="text">
       <string>OFF</string>
@@ -138,7 +138,7 @@
      </attribute>
     </widget>
    </item>
-   <item row="10" column="2" colspan="4">
+   <item row="9" column="1" colspan="4">
     <layout class="QHBoxLayout" name="horizontalLayout2">
      <item>
       <widget class="QPushButton" name="saveButton">
@@ -223,51 +223,135 @@
      </property>
     </widget>
    </item>
-   <item row="3" column="5">
+   <item row="3" column="4">
     <widget class="QCheckBox" name="useproxyguicheckbox">
      <property name="text">
       <string>use Proxy</string>
      </property>
     </widget>
    </item>
-   <item row="6" column="2" colspan="3">
-    <widget class="QLineEdit" name="lineEdit_proxyusername"/>
-   </item>
-   <item row="7" column="2" colspan="3">
-    <widget class="QLineEdit" name="lineEdit_proxypassword"/>
-   </item>
-   <item row="1" column="2" colspan="3">
-    <widget class="QComboBox" name="comboBox_proxytype">
-     <item>
-      <property name="text">
-       <string>Http</string>
+   <item row="6" column="0" colspan="5">
+    <widget class="QWidget" name="proxyWidget" native="true">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="MinimumExpanding" vsizetype="Expanding">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+     <property name="minimumSize">
+      <size>
+       <width>0</width>
+       <height>0</height>
+      </size>
+     </property>
+     <widget class="QWidget" name="gridLayoutWidget">
+      <property name="geometry">
+       <rect>
+        <x>0</x>
+        <y>0</y>
+        <width>711</width>
+        <height>122</height>
+       </rect>
       </property>
-     </item>
-     <item>
-      <property name="text">
-       <string>Socks5</string>
-      </property>
-     </item>
-    </widget>
-   </item>
-   <item row="6" column="0">
-    <widget class="QLabel" name="label_proxyusername">
-     <property name="layoutDirection">
-      <enum>Qt::RightToLeft</enum>
-     </property>
-     <property name="text">
-      <string>Proxy Username:</string>
-     </property>
-    </widget>
-   </item>
-   <item row="7" column="0">
-    <widget class="QLabel" name="label_proxypassword">
-     <property name="layoutDirection">
-      <enum>Qt::RightToLeft</enum>
-     </property>
-     <property name="text">
-      <string>Proxy Password:</string>
-     </property>
+      <layout class="QGridLayout" name="proxyLayout">
+       <item row="3" column="0">
+        <widget class="QLabel" name="label_proxyusername">
+         <property name="layoutDirection">
+          <enum>Qt::RightToLeft</enum>
+         </property>
+         <property name="text">
+          <string>Proxy Username:</string>
+         </property>
+        </widget>
+       </item>
+       <item row="4" column="0">
+        <widget class="QLabel" name="label_proxypassword">
+         <property name="layoutDirection">
+          <enum>Qt::RightToLeft</enum>
+         </property>
+         <property name="text">
+          <string>Proxy Password:</string>
+         </property>
+        </widget>
+       </item>
+       <item row="4" column="2">
+        <widget class="QLineEdit" name="lineEdit_proxypassword">
+         <property name="echoMode">
+          <enum>QLineEdit::Password</enum>
+         </property>
+        </widget>
+       </item>
+       <item row="3" column="2">
+        <widget class="QLineEdit" name="lineEdit_proxyusername"/>
+       </item>
+       <item row="2" column="0">
+        <widget class="QLabel" name="label_6">
+         <property name="text">
+          <string>Proxy host:</string>
+         </property>
+         <property name="alignment">
+          <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+         </property>
+        </widget>
+       </item>
+       <item row="2" column="2">
+        <layout class="QHBoxLayout" name="horizontalLayout_2">
+         <item>
+          <widget class="QComboBox" name="comboBox_proxytype">
+           <item>
+            <property name="text">
+             <string>Http</string>
+            </property>
+           </item>
+           <item>
+            <property name="text">
+             <string>Socks5</string>
+            </property>
+           </item>
+          </widget>
+         </item>
+         <item>
+          <widget class="QLineEdit" name="lineEdit_proxyhost"/>
+         </item>
+         <item>
+          <widget class="QLabel" name="label_7">
+           <property name="text">
+            <string>Port:</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QLineEdit" name="lineEdit_proxyport">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
+           <property name="minimumSize">
+            <size>
+             <width>70</width>
+             <height>0</height>
+            </size>
+           </property>
+           <property name="maximumSize">
+            <size>
+             <width>70</width>
+             <height>16777215</height>
+            </size>
+           </property>
+           <property name="baseSize">
+            <size>
+             <width>0</width>
+             <height>0</height>
+            </size>
+           </property>
+          </widget>
+         </item>
+        </layout>
+       </item>
+      </layout>
+     </widget>
     </widget>
    </item>
   </layout>
