proxyport and useproxycheckbox need a check, not loaded from settings into ui file currently.

--- a/ui/listener-edit.ui
+++ b/ui/listener-edit.ui
@@ -275,7 +275,7 @@
       <enum>Qt::RightToLeft</enum>
      </property>
      <property name="text">
-      <string>Port:</string>
+      <string>Proxyport:</string>
      </property>
     </widget>
    </item>
