--- a/ui/listener-edit.ui
+++ b/ui/listener-edit.ui
@@ -2,6 +2,9 @@
 <ui version="4.0">
  <class>ListenerEdit</class>
  <widget class="QWidget" name="ListenerEdit">
+  <property name="enabled">
+   <bool>true</bool>
+  </property>
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -9,6 +12,24 @@
     <width>675</width>
     <height>251</height>
    </rect>
+  </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>675</width>
+    <height>251</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>675</width>
+    <height>251</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>Settings: External IP-Address/Port</string>
@@ -27,7 +48,7 @@
       </font>
      </property>
      <property name="text">
-      <string>Enter your external IP-Address/Port or edit UUID:</string>
+      <string>Enter your external IP-Address/Port or edit UUID: </string>
      </property>
     </widget>
    </item>
@@ -280,18 +301,12 @@
     </widget>
    </item>
    <item row="5" column="5">
-    <widget class="QSpinBox" name="lineEdit_proxyport">
+    <widget class="QLineEdit" name="lineEdit_proxyport">
      <property name="sizePolicy">
-      <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-       <horstretch>0</horstretch>
-       <verstretch>0</verstretch>
+      <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+       <horstretch>51</horstretch>
+       <verstretch>20</verstretch>
       </sizepolicy>
-     </property>
-     <property name="maximum">
-      <number>65535</number>
-     </property>
-     <property name="value">
-      <number>8080</number>
      </property>
     </widget>
    </item>
@@ -364,9 +379,20 @@
   </layout>
  </widget>
  <tabstops>
+  <tabstop>useproxyguicheckbox</tabstop>
+  <tabstop>uuidEdit</tabstop>
+  <tabstop>onCheck</tabstop>
+  <tabstop>offCheck</tabstop>
   <tabstop>addressEdit</tabstop>
+  <tabstop>portBox</tabstop>
+  <tabstop>lineEdit_proxyhost</tabstop>
+  <tabstop>comboBox_proxytype</tabstop>
+  <tabstop>lineEdit_proxyport</tabstop>
+  <tabstop>lineEdit_proxyusername</tabstop>
+  <tabstop>lineEdit_proxypassword</tabstop>
   <tabstop>saveButton</tabstop>
   <tabstop>cancelButton</tabstop>
+  <tabstop>showmyip</tabstop>
  </tabstops>
  <resources>
   <include location="../arado.qrc"/>
