--- a/ui/url-display.ui
+++ b/ui/url-display.ui
@@ -256,6 +256,9 @@ border-image: url(:/images/btn3.png) 4;
            </item>
            <item>
             <widget class="QPushButton" name="crawlButton">
+             <property name="enabled">
+              <bool>false</bool>
+             </property>
              <property name="sizePolicy">
               <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
                <horstretch>0</horstretch>
