edit new feed database

--- a/arado.qrc
+++ b/arado.qrc
@@ -92,5 +92,7 @@
         <file alias="peeruuid.sql">schemafiles/peeruuid.sql</file>
         <file alias="uuindex.sql">schemafiles/uuindex.sql</file>
         <file alias="uniqueuu.sql">schemafiles/uniqueuu.sql</file>
+        <file alias="rssfeeds.sql">schemafiles/rssfeeds.sql</file>
+        <file alias="uniquerssfeeds.sql">schemafiles/uniquerssfeeds.sql</file>
     </qresource>
 </RCC>
