--- a/ui/connection-display.ui
+++ b/ui/connection-display.ui
@@ -88,19 +88,6 @@
        </item>
        <item>
         <layout class="QGridLayout" name="gridLayout">
-         <item row="1" column="1">
-          <widget class="QSpinBox" name="chunkA">
-           <property name="minimum">
-            <number>30</number>
-           </property>
-           <property name="maximum">
-            <number>80</number>
-           </property>
-           <property name="value">
-            <number>60</number>
-           </property>
-          </widget>
-         </item>
          <item row="0" column="0">
           <widget class="QLabel" name="labelipask_A">
            <property name="toolTip">
@@ -108,13 +95,6 @@
            </property>
            <property name="text">
             <string>Connections per Hour</string>
-           </property>
-          </widget>
-         </item>
-         <item row="1" column="0">
-          <widget class="QLabel" name="label_URL_A">
-           <property name="text">
-            <string>Amount of URLs in one Query</string>
            </property>
           </widget>
          </item>
@@ -136,14 +116,14 @@
             <double>1000000.000000000000000</double>
            </property>
            <property name="singleStep">
-            <double>1.000000000000000</double>
+            <double>0.100000000000000</double>
            </property>
            <property name="value">
             <double>720.000000000000000</double>
            </property>
           </widget>
          </item>
-         <item row="2" column="1">
+         <item row="1" column="1">
           <widget class="QPushButton" name="restartPollButtonA">
            <property name="text">
             <string>Save</string>
@@ -252,26 +232,6 @@
        </item>
        <item>
         <layout class="QGridLayout" name="gridLayout_2">
-         <item row="1" column="0">
-          <widget class="QLabel" name="label_URL_B">
-           <property name="text">
-            <string>Amount of URLs in one Query</string>
-           </property>
-          </widget>
-         </item>
-         <item row="1" column="1">
-          <widget class="QSpinBox" name="chunkB">
-           <property name="minimum">
-            <number>20</number>
-           </property>
-           <property name="maximum">
-            <number>80</number>
-           </property>
-           <property name="value">
-            <number>40</number>
-           </property>
-          </widget>
-         </item>
          <item row="0" column="0">
           <widget class="QLabel" name="labelipask_B">
            <property name="toolTip">
@@ -294,20 +254,20 @@
             <number>0</number>
            </property>
            <property name="minimum">
-            <double>6.000000000000000</double>
+            <double>1.000000000000000</double>
            </property>
            <property name="maximum">
             <double>100000.000000000000000</double>
            </property>
            <property name="singleStep">
-            <double>1.000000000000000</double>
+            <double>0.100000000000000</double>
            </property>
            <property name="value">
             <double>60.000000000000000</double>
            </property>
           </widget>
          </item>
-         <item row="2" column="1">
+         <item row="1" column="1">
           <widget class="QPushButton" name="restartPollButtonB">
            <property name="text">
             <string>Save</string>
@@ -432,26 +392,6 @@
        </item>
        <item>
         <layout class="QGridLayout" name="gridLayout_3">
-         <item row="1" column="0">
-          <widget class="QLabel" name="label_URL_C">
-           <property name="text">
-            <string>Amount of URLs in one Query</string>
-           </property>
-          </widget>
-         </item>
-         <item row="1" column="1">
-          <widget class="QSpinBox" name="chunkC">
-           <property name="minimum">
-            <number>10</number>
-           </property>
-           <property name="maximum">
-            <number>80</number>
-           </property>
-           <property name="value">
-            <number>20</number>
-           </property>
-          </widget>
-         </item>
          <item row="0" column="0">
           <widget class="QLabel" name="labelipask_C">
            <property name="toolTip">
@@ -474,20 +414,20 @@
             <number>0</number>
            </property>
            <property name="minimum">
-            <double>12.000000000000000</double>
+            <double>1.000000000000000</double>
            </property>
            <property name="maximum">
             <double>1000000.000000000000000</double>
            </property>
            <property name="singleStep">
-            <double>1.000000000000000</double>
+            <double>0.100000000000000</double>
            </property>
            <property name="value">
             <double>40.000000000000000</double>
            </property>
           </widget>
          </item>
-         <item row="2" column="1">
+         <item row="1" column="1">
           <widget class="QPushButton" name="restartPollButtonC">
            <property name="text">
             <string>Save</string>
@@ -717,66 +657,7 @@
     </layout>
    </item>
    <item row="2" column="1">
-    <layout class="QHBoxLayout" name="horizontalLayout_3">
-     <item>
-      <widget class="QLabel" name="labelipcachesize">
-       <property name="enabled">
-        <bool>true</bool>
-       </property>
-       <property name="layoutDirection">
-        <enum>Qt::RightToLeft</enum>
-       </property>
-       <property name="text">
-        <string>Device Cache Max:</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QSpinBox" name="ipcachesize">
-       <property name="enabled">
-        <bool>true</bool>
-       </property>
-       <property name="toolTip">
-        <string>Amount of IP-adresses in your IP-cache (1500-5000). Rise up, if all IP-adresses are outdated or offline and connections fail after a start.  Then each minute a request is sent to the boot-IP-connections, to fill the cache for 100%.</string>
-       </property>
-       <property name="minimum">
-        <number>1500</number>
-       </property>
-       <property name="maximum">
-        <number>5000</number>
-       </property>
-       <property name="value">
-        <number>2000</number>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QCheckBox" name="checkboxdisable_C">
-       <property name="enabled">
-        <bool>true</bool>
-       </property>
-       <property name="layoutDirection">
-        <enum>Qt::RightToLeft</enum>
-       </property>
-       <property name="text">
-        <string>Disable flexible devices</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QCheckBox" name="checkBox_I2P">
-       <property name="enabled">
-        <bool>true</bool>
-       </property>
-       <property name="layoutDirection">
-        <enum>Qt::RightToLeft</enum>
-       </property>
-       <property name="text">
-        <string>Enable  only</string>
-       </property>
-      </widget>
-     </item>
-    </layout>
+    <layout class="QHBoxLayout" name="horizontalLayout_3"/>
    </item>
    <item row="4" column="1">
     <layout class="QHBoxLayout" name="horizontalLayout">
@@ -985,14 +866,8 @@
   <tabstop>buttonMoveLeft</tabstop>
   <tabstop>buttonMoveRight</tabstop>
   <tabstop>freqABox</tabstop>
-  <tabstop>chunkA</tabstop>
   <tabstop>freqBBox</tabstop>
-  <tabstop>chunkB</tabstop>
   <tabstop>freqCBox</tabstop>
-  <tabstop>chunkC</tabstop>
-  <tabstop>ipcachesize</tabstop>
-  <tabstop>checkboxdisable_C</tabstop>
-  <tabstop>checkBox_I2P</tabstop>
   <tabstop>pushButton_A</tabstop>
   <tabstop>pushButton_B</tabstop>
   <tabstop>pushButton_C</tabstop>
