--- a/ui/rss-list.ui
+++ b/ui/rss-list.ui
@@ -38,7 +38,7 @@
      </attribute>
      <column>
       <property name="text">
-       <string>Nick</string>
+       <string>Feed-Name</string>
       </property>
      </column>
      <column>
