added rss Button & Layout Status Message renamed Fixed a bug for bringing the rss-tab in front when called (otherwise it shines through other tabs)

--- a/arado.qrc
+++ b/arado.qrc
@@ -50,6 +50,7 @@
         <file>images/btn2.png</file>
         <file>images/btn3.png</file>
         <file>images/youtubemp3play.png</file>
+        <file>images/rssbackground.gif</file>
     </qresource>
     <qresource prefix="/help">
         <file alias="LICENSE.txt">helpfiles/LICENSE.txt</file>
