--- a/ui/rss-list.ui
+++ b/ui/rss-list.ui
@@ -18,7 +18,7 @@
     <normaloff>:/arado-logo-colo-128.png</normaloff>:/arado-logo-colo-128.png</iconset>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="6" column="0" colspan="4">
+   <item row="6" column="0" colspan="2">
     <widget class="QTableWidget" name="feedTable">
      <property name="styleSheet">
       <string notr="true"/>
@@ -155,6 +155,9 @@
       </size>
      </property>
     </widget>
+   </item>
+   <item row="6" column="2" colspan="2">
+    <widget class="QTableWidget" name="tableWidget"/>
    </item>
   </layout>
  </widget>
