--- a/ui/rss-list.ui
+++ b/ui/rss-list.ui
@@ -18,7 +18,53 @@
     <normaloff>:/arado-logo-colo-128.png</normaloff>:/arado-logo-colo-128.png</iconset>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="6" column="0" colspan="4">
+   <item row="0" column="0" rowspan="2">
+    <widget class="QPushButton" name="closeButton1">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+     <property name="toolTip">
+      <string>Close Tab.</string>
+     </property>
+     <property name="layoutDirection">
+      <enum>Qt::LeftToRight</enum>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+     <property name="icon">
+      <iconset resource="../arado.qrc">
+       <normaloff>:/images/rssbackground.png</normaloff>:/images/rssbackground.png</iconset>
+     </property>
+     <property name="iconSize">
+      <size>
+       <width>96</width>
+       <height>96</height>
+      </size>
+     </property>
+     <property name="flat">
+      <bool>true</bool>
+     </property>
+    </widget>
+   </item>
+   <item row="0" column="1">
+    <widget class="QLabel" name="label">
+     <property name="font">
+      <font>
+       <pointsize>12</pointsize>
+       <weight>75</weight>
+       <bold>true</bold>
+      </font>
+     </property>
+     <property name="text">
+      <string>My RSS Feed List</string>
+     </property>
+    </widget>
+   </item>
+   <item row="2" column="0" colspan="4">
     <widget class="QTableWidget" name="feedTable">
      <property name="styleSheet">
       <string notr="true"/>
@@ -47,53 +93,20 @@
      </column>
     </widget>
    </item>
-   <item row="1" column="0">
-    <widget class="QPushButton" name="closeButton1">
-     <property name="sizePolicy">
-      <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
-       <horstretch>0</horstretch>
-       <verstretch>0</verstretch>
-      </sizepolicy>
-     </property>
-     <property name="toolTip">
-      <string>Close Tab.</string>
-     </property>
-     <property name="layoutDirection">
-      <enum>Qt::LeftToRight</enum>
-     </property>
-     <property name="text">
-      <string/>
-     </property>
-     <property name="icon">
-      <iconset resource="../arado.qrc">
-       <normaloff>:/images/rssbackground.png</normaloff>:/images/rssbackground.png</iconset>
-     </property>
-     <property name="iconSize">
+   <item row="4" column="2" colspan="2">
+    <widget class="QPushButton" name="closeButton2">
+     <property name="minimumSize">
       <size>
-       <width>100</width>
-       <height>100</height>
+       <width>0</width>
+       <height>43</height>
       </size>
      </property>
-     <property name="flat">
-      <bool>true</bool>
-     </property>
-    </widget>
-   </item>
-   <item row="1" column="1">
-    <widget class="QLabel" name="label">
-     <property name="font">
-      <font>
-       <pointsize>12</pointsize>
-       <weight>75</weight>
-       <bold>true</bold>
-      </font>
-     </property>
      <property name="text">
-      <string>My RSS Feed List</string>
+      <string>Close</string>
      </property>
     </widget>
    </item>
-   <item row="7" column="2" colspan="2">
+   <item row="4" column="1">
     <widget class="QPushButton" name="deleteButton">
      <property name="minimumSize">
       <size>
@@ -116,7 +129,7 @@
      </property>
     </widget>
    </item>
-   <item row="7" column="0" colspan="2">
+   <item row="4" column="0">
     <widget class="QPushButton" name="saveButton">
      <property name="minimumSize">
       <size>
@@ -139,7 +152,7 @@
      </property>
     </widget>
    </item>
-   <item row="1" column="3">
+   <item row="0" column="3">
     <widget class="QPushButton" name="newButton">
      <property name="minimumSize">
       <size>
@@ -159,19 +172,6 @@
        <width>32</width>
        <height>32</height>
       </size>
-     </property>
-    </widget>
-   </item>
-   <item row="1" column="2">
-    <widget class="QPushButton" name="closeButton2">
-     <property name="minimumSize">
-      <size>
-       <width>0</width>
-       <height>43</height>
-      </size>
-     </property>
-     <property name="text">
-      <string>Close</string>
      </property>
     </widget>
    </item>
