--- a/arado.qrc
+++ b/arado.qrc
@@ -55,6 +55,7 @@
         <file>images/btn1m.png</file>
         <file>images/btn2m.png</file>
         <file>images/btn3m.png</file>
+        <file>images/kalzium.png</file>
     </qresource>
     <qresource prefix="/help">
         <file alias="LICENSE.txt">helpfiles/LICENSE.txt</file>
