term openmielke added to gui, from http://sf.net/projects/openmielke

--- a/ui/aradomain.ui
+++ b/ui/aradomain.ui
@@ -247,7 +247,7 @@
      <normaloff>:/images/kalzium.png</normaloff>:/images/kalzium.png</iconset>
    </property>
    <property name="text">
-    <string>Crawler Settings</string>
+    <string>Configure Openmielke</string>
    </property>
    <property name="toolTip">
     <string>Lookup: Crawl all selected URLs for more URLs from this context.</string>
