--- a/ui/crawler-settings.ui
+++ b/ui/crawler-settings.ui
@@ -128,7 +128,7 @@
      </property>
      <property name="icon">
       <iconset resource="../arado.qrc">
-       <normaloff>:/images/kalzium.png</normaloff>:/images/kalzium.png</iconset>
+       <normaloff>:/images/openmielke.png</normaloff>:/images/openmielke.png</iconset>
      </property>
      <property name="iconSize">
       <size>
