--- a/arado.qrc
+++ b/arado.qrc
@@ -55,8 +55,8 @@
         <file>images/btn1m.png</file>
         <file>images/btn2m.png</file>
         <file>images/btn3m.png</file>
-        <file>images/kalzium.png</file>
         <file>images/aradocap-transparent32.png</file>
+        <file>images/openmielke.png</file>
     </qresource>
     <qresource prefix="/help">
         <file alias="LICENSE.txt">helpfiles/LICENSE.txt</file>
@@ -101,5 +101,9 @@
         <file alias="uniqueuu.sql">schemafiles/uniqueuu.sql</file>
         <file alias="rssfeeds.sql">schemafiles/rssfeeds.sql</file>
         <file alias="uniquerssfeeds.sql">schemafiles/uniquerssfeeds.sql</file>
+    </qresource>
+    <qresource prefix="/html">
+        <file>html/url-display-view.html</file>
+        <file>html/images/kugar.png</file>
     </qresource>
 </RCC>
