--- a/ui/connection-display.ui
+++ b/ui/connection-display.ui
@@ -94,7 +94,11 @@
             <string>Example: 720 connections per hour = one connection each 5 seconds.</string>
            </property>
            <property name="text">
-            <string>Connections per Hour (random &lt;-&gt; recent URLs)</string>
+            <string>Connections per Hour 
+random &lt;-&gt; recent URLs</string>
+           </property>
+           <property name="alignment">
+            <set>Qt::AlignCenter</set>
            </property>
           </widget>
          </item>
@@ -263,7 +267,11 @@
             <string>Example: 60 connections per hour = one connection each 60 seconds.</string>
            </property>
            <property name="text">
-            <string>Connections per Hour(random &lt;-&gt; recent URLs)</string>
+            <string>Connections per Hour 
+random &lt;-&gt; recent URLs</string>
+           </property>
+           <property name="alignment">
+            <set>Qt::AlignCenter</set>
            </property>
           </widget>
          </item>
@@ -442,7 +450,11 @@
             <string>Example: 40 connections per hour = one connection each 90 seconds.</string>
            </property>
            <property name="text">
-            <string>Connections per Hour (random &lt;-&gt; recent URLs)</string>
+            <string>Connections per Hour 
+random &lt;-&gt; recent URLs</string>
+           </property>
+           <property name="alignment">
+            <set>Qt::AlignCenter</set>
            </property>
           </widget>
          </item>
