cosmetics in the early morning. TBD: kugar should open always browser.

--- a/arado.qrc
+++ b/arado.qrc
@@ -108,5 +108,6 @@
     <qresource prefix="/html">
         <file>html/url-display-view.html</file>
         <file>html/images/kugar.png</file>
+        <file>html/images/arado-logo-colo-32.png</file>
     </qresource>
 </RCC>
