possible gui preparation to mail whole entry (table line).

--- a/arado.qrc
+++ b/arado.qrc
@@ -109,5 +109,7 @@
         <file>html/url-display-view.html</file>
         <file>html/images/kugar.png</file>
         <file>html/images/arado-logo-colo-32.png</file>
+        <file>html/images/copy.png</file>
+        <file>html/images/mail.png</file>
     </qresource>
 </RCC>
