uncommented function draft: "Aradofy what links to this URL." using e.g. this service: http://blekko.com/ws/http:%2F%2Fwww.wikipedia.org+/links

--- a/arado.qrc
+++ b/arado.qrc
@@ -112,5 +112,6 @@
         <file>html/images/copy.png</file>
         <file>html/images/mail.png</file>
         <file>html/images/youtubemp3play.png</file>
+        <file>html/images/openmielke.png</file>
     </qresource>
 </RCC>
