ave rss-edit-detail preference, clean remnants of tableview

--- a/ui/rss-list.ui
+++ b/ui/rss-list.ui
@@ -203,7 +203,7 @@
       <string>Edit</string>
      </property>
      <property name="checked">
-      <bool>false</bool>
+      <bool>true</bool>
      </property>
     </widget>
    </item>
