rss item list in rss ta table. Thanks again to Hankin for this patch. one improvement needed: a mouseclick or cursor over decription should not browse the url, but just mark it as read and let it disappear. As it is coded with "row", maybe a delete button or a curser over function to delete without browse.

--- a/arado.qrc
+++ b/arado.qrc
@@ -104,6 +104,7 @@
         <file alias="uniqueuu.sql">schemafiles/uniqueuu.sql</file>
         <file alias="rssfeeds.sql">schemafiles/rssfeeds.sql</file>
         <file alias="uniquerssfeeds.sql">schemafiles/uniquerssfeeds.sql</file>
+        <file alias="newfeeditems.sql">schemafiles/newfeeditems.sql</file>
     </qresource>
     <qresource prefix="/html">
         <file>html/url-display-view.html</file>
